[package]
name = "pgqueue-macros"
description = "Procedural macros for the pgqueue crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "pgqueue_macros"
proc-macro = true

[dependencies]
cron_schedule.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
