[package]
name = "pgqueue"
description = "Background and cron job processing backed by PostgreSQL 18+"
autotests = false
keywords = ["job", "queue", "cron", "postgres", "worker"]
categories = ["asynchronous", "database"]
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "pgqueue"

[[test]]
name = "integration"
path = "tests/integration.rs"

[features]
default = []
dashboard = ["dep:axum", "dep:include_dir", "tokio/net"]

[dependencies]
pgqueue-macros.workspace = true

chrono.workspace = true
cron_schedule.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

axum = { workspace = true, optional = true }
include_dir = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt-multi-thread"] }
tower.workspace = true
tracing-subscriber.workspace = true
trybuild.workspace = true
